SERVER-45826 Detect and fail when using passphrase with PKCS1/8 on macOS

(cherry picked from commit 8a73ec08c15a86adeb4bd6232608171972ad7579)